Sửa lại Logic getAllRoundCriteria + insert sample data